RESOLVED FIXED285338
ASSERTION FAILED: !input->userAgentShadowRoot() when cloning a switch input
https://bugs.webkit.org/show_bug.cgi?id=285338
Summary ASSERTION FAILED: !input->userAgentShadowRoot() when cloning a switch input
Tim Nguyen (:ntim)
Reported 2025-01-03 04:25:46 PST
Noticed this on: https://bugs.webkit.org/attachment.cgi?id=473761 ASSERTION FAILED: !input->userAgentShadowRoot() /Volumes/Data/Code/Safari/OpenSource/Source/WebCore/dom/Element.cpp(5518) : void WebCore::Element::cloneDataFromElement(const Element &) 1 0x304c3aed8 WebCore::Element::cloneDataFromElement(WebCore::Element const&) 2 0x304c3a7bc WebCore::Element::cloneElementWithoutChildren(WebCore::TreeScope&) 3 0x304c3a620 WebCore::Element::cloneNodeInternal(WebCore::TreeScope&, WebCore::Node::CloningOperation) 4 0x304a96594 WebCore::ContainerNode::cloneChildNodes(WebCore::TreeScope&, WebCore::ContainerNode&) 5 0x304c3aa00 WebCore::Element::cloneElementWithChildren(WebCore::TreeScope&) 6 0x304c3a684 WebCore::Element::cloneNodeInternal(WebCore::TreeScope&, WebCore::Node::CloningOperation) 7 0x304d63248 WebCore::Node::cloneNode(bool) 8 0x304d632e4 WebCore::Node::cloneNodeForBindings(bool)
Attachments
Ryosuke Niwa
Comment 1 2025-01-05 09:43:25 PST
This means that the optimization in https://bugs.webkit.org/show_bug.cgi?id=269900 isn't working for this specific case. Do you have a test case which reproduces this assertion failure?
Anne van Kesteren
Comment 2 2025-01-06 01:46:12 PST
EWS
Comment 3 2025-01-06 04:41:00 PST
Committed 288458@main (1e3a17caec13): <https://commits.webkit.org/288458@main> Reviewed commits have been landed. Closing PR #38555 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-01-06 04:42:17 PST
Note You need to log in before you can comment on or make changes to this bug.