ASSERTION FAILED: !input->userAgentShadowRoot() when cloning a switch input https://bugs.webkit.org/show_bug.cgi?id=285338

Reviewed by Ryosuke Niwa.

No longer initialize a user agent shadow root when a switch attribute
is set through the parser or cloning as this will be taken care of
later.

Additionally, add more ScriptDisallowedScope::EventAllowedScope
annotations inside <input type=checkbox switch> user agent shadow root
creation as otherwise we'd run into asserts there as well.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-type-checkbox-switch.tentative.window-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-input-element/input-type-checkbox-switch.tentative.window.js:
* Source/WebCore/html/CheckboxInputType.cpp:
(WebCore::CheckboxInputType::createShadowSubtree):
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::attributeChanged):

Canonical link: https://commits.webkit.org/288458@main